refactor: commands return a future